Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,32 +1,32 @@
 # Remove this line before deploying
 _____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "5278865486:AAEWR1gmo_BijkWAZ11L9y4yDzAsmFL30UY"
+GDRIVE_FOLDER_ID = "1UhYxlrXvHMXCpyYj2phm9qexPEF4xiMp"
+OWNER_ID = 1362103108
 DOWNLOAD_DIR = "/usr/src/app/downloads"
-DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
+DOWNLOAD_STATUS_UPDATE_INTERVAL = 1
 AUTO_DELETE_MESSAGE_DURATION = 20
-TELEGRAM_API =
-TELEGRAM_HASH = ""
+TELEGRAM_API = 15821484
+TELEGRAM_HASH = "f66b8ad00b991244c65fedc357cc5699"
 # OPTIONAL CONFIG
 IS_TEAM_DRIVE = ""
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
+AUTHORIZED_CHATS = "1287332669 5065555748"
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
-STATUS_LIMIT = ""
-STOP_DUPLICATE = ""
+USE_SERVICE_ACCOUNTS = "True"
+INDEX_URL = "https://nitw.torzu.workers.dev/0:/Torrent"
+STATUS_LIMIT = "1000"
+STOP_DUPLICATE = "True"
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
 EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = ""
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/anasty17/mirror-leech-telegram-bot"
+UPSTREAM_BRANCH = "h-code"
 # Leech
 USER_SESSION_STRING = ""
 LEECH_SPLIT_SIZE = ""
@@ -34,7 +34,7 @@ AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
 CUSTOM_FILENAME = ""
 # qBittorrent
-BASE_URL_OF_BOT = ""
+BASE_URL_OF_BOT = "https://torzu.herokuapp.com"
 SERVER_PORT = ""
 WEB_PINCODE = ""
 QB_SEED = ""
@@ -54,7 +54,7 @@ MEGA_API_KEY = ""
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
 # Buttons
-VIEW_LINK = ""
+VIEW_LINK = "True"
 # Torrent Search
 SEARCH_API_LINK = ""
 SEARCH_LIMIT = ""
