--- a/config.env
+++ b/config.env
@@ -73,8 +73,8 @@ FSUB_CHANNEL_ID =
 
 # qBittorrent
 BASE_URL_OF_BOT = ""
-SERVER_PORT = "https://botzyl.herokuapp.com/"
-WEB_PINCODE = ""
+SERVER_PORT = "https://144.24.151.106"
+WEB_PINCODE = "80"
 QB_SEED = ""
 
 # RSS
