--- a/config.env
+++ b/config.env
@@ -72,9 +72,9 @@ CHANNEL_USERNAME = ""
 FSUB_CHANNEL_ID =
 
 # qBittorrent
-BASE_URL_OF_BOT = ""
-SERVER_PORT = "https://144.24.151.106"
-WEB_PINCODE = "80"
+BASE_URL_OF_BOT = "https://144.24.142.41"
+SERVER_PORT = "80"
+WEB_PINCODE = ""
 QB_SEED = ""
 
 # RSS
